[gd_scene load_steps=10 format=2]

[ext_resource path="res://ak47/AK47.gd" type="Script" id=1]
[ext_resource path="res://ak47/AK 47.fbx" type="PackedScene" id=2]
[ext_resource path="res://ak47/ak47_reload.wav" type="AudioStream" id=3]
[ext_resource path="res://ak47/Glock-18 Slideback.wav" type="AudioStream" id=4]
[ext_resource path="res://ak47/ak47-1.wav" type="AudioStream" id=5]
[ext_resource path="res://ak47/Reload_gun.tres" type="Animation" id=6]
[ext_resource path="res://ak47/Fire_gun.tres" type="Animation" id=7]
[ext_resource path="res://ak47/Focus.tres" type="Animation" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Focused_fire"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Model:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.26, -0.349, -0.519 ), Vector3( 1.26, -0.392958, -0.453812 ), Vector3( 1.26, -0.349, -0.519 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Model:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 2, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Muzzle_flash:light_energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.01, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 12.0, 0.0 ]
}

[node name="AK 47" type="Spatial"]
script = ExtResource( 1 )

[node name="Model" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1.26, -0.349, -0.519 )

[node name="RayCast" type="RayCast" parent="Model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00508487, 1.22895, -4.43022 )
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="Fire_gun" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.26, 0.144257, 0.042305 )
stream = ExtResource( 5 )
max_db = -12.0
attenuation_filter_cutoff_hz = 15000.0
attenuation_filter_db = -12.0

[node name="Empty_clip" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.26, 0.207764, 0.33977 )
stream = ExtResource( 4 )
attenuation_filter_cutoff_hz = 12000.0
attenuation_filter_db = -8.0

[node name="Reload" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.26, 0.0604, -0.519 )
stream = ExtResource( 3 )
attenuation_filter_cutoff_hz = 12000.0
attenuation_filter_db = -8.0

[node name="Muzzle_flash" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.26, 0.0308743, -2.92132 )
light_color = Color( 1, 0.815686, 0.556863, 1 )
light_energy = 0.0
spot_range = 50.0
spot_angle = 135.8

[node name="FPS_camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.265, 0.283, -0.326 )
fov = 60.0
far = 350.0

[node name="Bullet_counter" type="Label" parent="."]
margin_left = 930.0
margin_top = 547.0
margin_right = 1009.0
margin_bottom = 581.0
text = "30/30"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModelAnimator" type="AnimationPlayer" parent="."]
anims/Fire_gun = ExtResource( 7 )
anims/Focused_fire = SubResource( 1 )
anims/Reload_gun = ExtResource( 6 )

[node name="CameraAnimator" type="AnimationPlayer" parent="."]
anims/Focus = ExtResource( 8 )
